src/test/deca/context/valid/provided/boucle_division.deca
// Description:
//    test d'une boucle while avec division entière
//
// Resultats:
//    10
//    5
//    2

{
    int x;
    x = 10;
    while (x > 0) {
        println(x);
        x = x / 2;
    }
}
